--- a/abcl/README
+++ b/abcl/README
@@ -1,8 +1,9 @@
 GENERAL INFORMATION
 ===================
 
-Armed Bear Common Lisp is an implementation of ANSI Common Lisp that
-runs in a Java virtual machine.  It compiles its code to Java byte code.
+ABCL (Armed Bear Common Lisp) is an implementation of ANSI Common Lisp
+that runs in a Java virtual machine.  It compiles its code to Java
+byte code.
 
 
 LICENSE
@@ -36,15 +37,15 @@ BUILDING
 ========
 
 If you want to build ABCL, you have 3 options. The first option
-applies when you come from a lisp background. The second and thirds
+applies when you come from a Lisp background. The second and thirds
 options are more appropriate when you come from Java development:
 
- I)  Bootstrap ABCL using a Common Lisp implementation
-     Supported implementations for this process: SBCL, CMUCL, OpenMCL,
-     Allegro CL, LispWorks or CLISP.
+ I)  Bootstrap ABCL using a Common Lisp implementation Supported
+     implementations for this process: SBCL, CMUCL, OpenMCL, Allegro
+     CL, LispWorks or CLISP.
 
 II)  Use the Ant make-like build tool for Java environments
-     The tested lowest working version is Ant 1.7.0.
+     The tested lowest working version is Ant 1.7.0.  
 
 III) Use the Netbeans 6.x IDE to open ABCL as a project.
 
@@ -107,11 +108,12 @@ One should be able to open the project as a project in Netbeans 6.x.
 BUGS
 ====
 
-A lot of (renewed) energy has been spent to make ABCL a compliant
-and practically useable Common Lisp implementation.  Because of this,
-ABCL 0.0.11 now fails only 47 out of 21702 tests in the ANSI CL test
-suite.  Next to that, the fail count of the Maxima test suite has been
-reduced from over 1400 in 0.0.10 to little more than 600 in 0.0.11.
+A lot of (renewed) energy has been spent to make ABCL a compliant and
+practically useable Common Lisp implementation.  Because of this, ABCL
+0.0.13 now fails only 50 out of 21702 tests in the ANSI CL test suite.
+Next to that, the fail count of the Maxima test suite has been reduced
+from over 1400 in 0.0.10 to little more than 600 in 0.0.11, to xxx in
+0.13.
 
 ABCL's CLOS does not handle on-the-fly redefinition of classes
 correctly, and in any event is intolerably slow. There is no support
@@ -132,4 +134,4 @@ Have fun!
 
 On behalf of all ABCL development team and contributors,
 Erik Huelsmann
-October 18, 2008
+Feburary 21, 2009
