Add the release date.
git-svn-id: http://abcl.org/svn/tags/0.15.0@12002 1c010e3e-69d0-11dd-93a8-456734b0d56f

--- a/abcl/CHANGES
+++ b/abcl/CHANGES
@@ -1,5 +1,5 @@
 Version 0.15.0
-(?? Jun, 2009) - Anticipate a June date
+(07 Jun, 2009) - Anticipate a June date
 
  Summary of changes:
   * 2 more MOP exported symbols to support Cells port
