Backport [svn 12149] guard against null LispStackFrames.
Updated CHANGES to list bugs for unreleased 0.16.1.



git-svn-id: http://abcl.org/svn/branches/0.16.x@12150 1c010e3e-69d0-11dd-93a8-456734b0d56f

--- a/abcl/CHANGES
+++ b/abcl/CHANGES
@@ -1,5 +1,14 @@
+Version 0.16.1
+svn://common-lisp.net/project/armedbear/svn/branches/0.16.x/abcl
+(Unreleased)
+
+Bugs fixed:
+
+  * More careful checking for null args in LispStackFrame
+  * Honor appearance of &allow-other-keys in CLOS MAKE-INSTANCE
+
 Version 0.16.0
-(unreleased)
+(06 Sep, 2009)
 
   Summary of changes:
   * Fixed generated wrapper for path names with spaces (Windows)
