Fix leakage of temp files during compilation.
git-svn-id: http://abcl.org/svn/branches/0.16.x@12194 1c010e3e-69d0-11dd-93a8-456734b0d56f

--- a/abcl/CHANGES
+++ b/abcl/CHANGES
@@ -7,6 +7,7 @@ Bugs fixed:
   * More careful checking for null args in LispStackFrame
   * Honor appearance of &allow-other-keys in CLOS MAKE-INSTANCE
   * Fix #63: GO forms to non-existent TAGBODY labels would exit ABCL
+  * Don't leak temp files during compilation.
 
 Version 0.16.0
 svn://common-lisp.net/project/armedbear/svn/tags/0.16.0/abcl
